[tool.poetry]
name = "accessmap-api"
version = "0.1.2"
description = "AccessMap core web API: pedestrian profiles, etc."
authors = ["Nick Bolten <nbolten@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
flask_jwt_extended = "^3.18"
authlib = "^0.10.0"
flask-sqlalchemy = "^2.3"
python-dotenv = "^0.10.1"
gunicorn = "^19.9"
psycopg2 = "^2.7"
flask_migrate = "^2.4"

[tool.poetry.dev-dependencies]
black = "=18.9b0"
pre-commit = "^1.14"

[tool.black]
line-length = 79
exclude = """
(
  setup.py
)
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
